Extra javadoc. Remove an unused method.